--- a/src/main/ui/src/components/TaskTracker/TaskForm.css
+++ b/src/main/ui/src/components/TaskTracker/TaskForm.css
@@ -20,10 +20,6 @@ body{
   border-radius: 5px;
   box-shadow: 0px 10px 15px rgba(0,0,0,0.1);
 }
-.wrapper header{
-  font-size: 30px;
-  font-weight: 600;
-}
 .wrapper .inputField{
   margin: 20px 0;
   width: 100%;
@@ -87,5 +83,14 @@ body{
 .edit-icon {
   color: black;
   margin-left: 550px;
+}
+
+.task-wrapper{
+  background: rgb(179, 207, 240);
+  max-width: 800px;
+  margin: 5px auto;
+  padding: 10px;
+  border-radius: 5px;
+  box-shadow: 0px 10px 15px rgba(0,0,0,0.1);
 }
 
