--- a/src/main/ui/src/components/TaskTracker/TaskForm.css
+++ b/src/main/ui/src/components/TaskTracker/TaskForm.css
@@ -9,7 +9,7 @@ body{
   width: 100%;
   height: 80vh;
   padding: 0px;
-  background: linear-gradient(to bottom, #383838 0%, #111010 100%);
+  background: linear-gradient(to bottom, #031e42 0%, #111010 100%);
 }
 .wrapper{
   background: #fff;
@@ -48,7 +48,7 @@ body{
 
 .inputField button:hover,
 .footer button:hover{
-  background: #8a2b06;
+  background: #1518be;
 }
 
 .wrapper .todoList{
@@ -91,6 +91,6 @@ body{
   margin: 5px auto;
   padding: 10px;
   border-radius: 5px;
-  box-shadow: 0px 10px 15px rgba(0,0,0,0.1);
+  box-shadow: 0px 10px 15px rgba(192, 41, 41, 0.1);
 }
 
