--- a/src/main/ui/src/components/TaskTracker/TaskForm.css
+++ b/src/main/ui/src/components/TaskTracker/TaskForm.css
@@ -14,7 +14,7 @@ body{
 .wrapper{
   background: #fff;
   max-width: 800px;
-  width: 100%;
+  width: 50%;
   margin: 20px auto;
   padding: 25px;
   border-radius: 14px;
@@ -42,21 +42,23 @@ body{
     border: 1px solid #0c0c0c;
     background: #141414;
     color: white;
-    padding: 0.25rem 1rem;
+    padding: 0rem 1rem;
     cursor: pointer;
+    font-size: 14px;
 }
 
 .inputField button:hover,
 .footer button:hover{
-  background: #8a2b06;
+  background: #06074d;
 }
 
 .wrapper .todoList{
   max-height: 250px;
   overflow-y: auto;
+  width: 100%;
 }
 
-.todoList td{
+.todoList {
   position: relative;
   list-style: none;
   margin-bottom: 8px;
@@ -71,18 +73,18 @@ body{
 .icons {
   display: flex;
   align-items: center;
-  font-size: 24px;
+  font-size: 22px;
   cursor: pointer;
 }
 
 .delete-icon {
-  margin-left: 4px;
-  color: black;
+  
+  color: rgb(192, 14, 14);
 }
 
 .edit-icon {
   color: black;
-  margin-left: 550px;
+  
 }
 
 .task-wrapper{
@@ -92,6 +94,21 @@ body{
   padding: 10px;
   border-radius: 5px;
   box-shadow: 0px 10px 15px rgba(0,0,0,0.1);
+}
+.calendar{
+    background: rgb(140, 140, 143);
+    max-width: 800px;
+    width: 50%;
+    margin: 20px auto;
+    padding: 25px;
+    border-radius: 14px;
+    box-shadow: 0px 10px 15px rgba(0,0,0,0.1);
+  
+}
+
+.complete{
+  text-decoration: line-through;
+  opacity: 0.4;
 }
 
 
